fixed align li a

--- a/webPortal/src/app/menu/menu.component.css
+++ b/webPortal/src/app/menu/menu.component.css
@@ -1,23 +1,29 @@
 a{
-    text-decoration:none;
-    cursor:pointer;
+    text-decoration: none;
+    color:inherit;
 }
 
 nav {
-    width:100%;
-    height:50px;
     background:red;
-    display:flex;
 }
 
 nav ul {
+    width:100%;
+    height:50px;
     list-style-type:none;
+    padding:0;
+    margin:0;
     display:flex;
-    flex-direction:row;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content:flex-start;
+    align-items: center;
+    flex-direction: row;
+    list-style-type: none;
 }
 
 nav ul li {
-    width:100px;
+    margin:20px;
+}
+
+a:nth-child(2){
+    margin-left: auto;
 }
